--- a/index.html
+++ b/index.html
@@ -56,30 +56,32 @@
           <div class="holder">
             <div class="slide" id="slide-0">
               <div class="wrapper">
-                <div class="row main-block">
-                  <div class="col-lg-1">
-                    <span>01/03</span>
+                <div class="slide-container">
+                  <div class="row">
+                    <div class="col-lg-1">
+                      <span>01/03</span>
+                    </div>
+                    <div class="col-lg-5">
+                      <span class="subtitle">AGÊNCIA DE ESTRATÉGIA DIGITAL</span>
+                      <h1>A evolução do seu<br> negócio começa<br> aqui e agora</h1>
+                      <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
+                    </div>
+                    <div class="col-lg-1"></div>
+                    <div class="col-lg-5"></div>
                   </div>
-                  <div class="col-lg-5">
-                    <span class="subtitle">AGÊNCIA DE ESTRATÉGIA DIGITAL</span>
-                    <h1>A evolução do seu<br> negócio começa<br> aqui e agora</h1>
-                    <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
-                  </div>
-                  <div class="col-lg-1"></div>
-                  <div class="col-lg-5"></div>
-                </div>
-                <!--
-                <div class="row">
                   <div class="col-lg-6">
-                    <span>SOMOS BUZZBEAT</span>
-                    <hr>
-                    <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
-                    <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
-                    <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+                    <div class="social-media"> 
+                      <span>SOMOS BUZZBEAT</span>
+                      <div class="white-line"></div>
+                      <a href="https://www.instagram.com/wearebuzzbeat/" target="_blank"><img src="img/instagram-logo.svg"></a>
+                      <a href="https://www.facebook.com/buzzbeatstrategy" target="_blank"><img src="img/facebook-logo.svg"></a>
+                      <a href="https://www.linkedin.com/company/buzzbeat/" target="_blank"><img src="img/linkedin-logo.svg"></a>
+                    </div>
                   </div>
-                  <div class="col-lg-6"></div>
+                  <div class="col-lg-6">
+
+                  </div>
                 </div>
-                -->
               </div>
               
             </div>
@@ -98,19 +100,18 @@
      <!-- END Module Main Slider -->
   </section>
 
-  <section class="offset">
-    <div class="row">
-      <div class="col-lg-7 col-md-7 col-sm-12">
+  <section class="offset-project-cta">
+    <div class="wrapper">
+      <div class="row">
+        <div class="col-lg-7 col-md-7 col-sm-12">
 
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-12">
-        <div class="project-cta">
-          <span>Tem um projeto para iniciar?<br>
-          <strong>Vamos conversar.</strong></span>
         </div>
-      </div>
-      <div class="col-lg-1 col-md-1 col-sm-12">
-        <div></div>
+        <div class="col-lg-5 col-md-5 col-sm-12">
+          <div class="project-cta">
+            <span>Tem um projeto para iniciar?<br>
+            <strong>Vamos conversar.</strong></span>
+          </div>
+        </div>
       </div>
     </div>
   </section>
