--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     <div class="col-lg-1 col-md-12 col-sm-12">
                       <span><b>01</b>/03</span>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 col-md-5 col-sm-12">
                       <span class="subtitle">AGÊNCIA DE ESTRATÉGIA DIGITAL</span>
                       <h1>A evolução do seu<br> negócio começa<br> aqui e agora</h1>
-                      <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
+                      <a class="desktop btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
                     </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-5"></div>
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
           <span class="subtitle">O QUE FAZEMOS</span>
-          <h2>Adicionamos valor<br>ao seu futuro</h2>
+          <h2>Adicionamos valor<br> ao seu futuro</h2>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
           <p>Desenhamos a transformação do seu negócio com estratégia, tecnologia e criatividade, para que se possa focar nos seus clientes.</p>
@@ -148,7 +148,7 @@
     <div class="row">
       <div class="col-lg-2 col-md-2"></div>
 
-      <div class="col-lg-10 col-md-10 desktop">
+      <div class="col-lg-10 col-md-10 col-sm-12 desktop">
         <div class="carousel-wrapper spacer">
             <div class="owl-carousel owl-theme right-slider">
               <div class="item"><a href=""><img src="img/01-carousel-img.jpg"><span class="service-title">Criatividade</span></a></div>
@@ -163,7 +163,7 @@
         </div>
       </div>
       
-      <div class="col-lg-10 col-md-10">
+      <div class="col-lg-10 col-md-10 col-sm-12">
         <div class="carousel-wrapper">
             <div class="owl-carousel owl-theme left-slider">
               <div class="item"><a href=""><img src="img/01-carousel-img.jpg"><span class="service-title">Criatividade</span></a></div>
@@ -252,7 +252,7 @@
           <span class="subtitle">INSIGHTS</span>
           <h2>Estamos sempre<br> a aprender, e<br> escrevemos sobre isso.</h2>
         </div>
-        <div class="col-lg-2 col-md-2">
+        <div class="col-lg-2 col-md-2 col-sm-12">
           <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Todos os Insights</span></a>
         </div>
       </div>
@@ -312,12 +312,12 @@
 
     <div class="larger-wrapper">
       <div class="row team align-center">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="padding-right">
             <img class="img-fluid" src="img/team-img.png">
           </div>
         </div>
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="padding-left">
             <span class="subtitle">SOMOS BUZZBEAT</span>
             <h2>Somos uma equipa<br> de especialistas<br> ao seu dispor</h2>
@@ -334,17 +334,17 @@
     <section class="footer-1">
       <div class="wrapper">
         <div class="row align-center">
-          <div class="col-lg-5 col-md-5 col-sm-12">
+          <div class="col-lg-5 col-md-5 col-sm-12 order-second">
             <span class="subtitle">Onde estamos</span>
-            <p class="address">Tagus Park, Edifício Núcleo Central 100,<br>Salas 342, 344, 346<br>2740-122 Porto Salvo, Portugal</p>
+            <p class="address">Tagus Park, Edifício Núcleo Central 100,<br> Salas 342, 344, 346<br> 2740-122 Porto Salvo, Portugal</p>
             <span class="subtitle">fale connosco</span><br>
             <p><a href="tel:+351211383266">(+351) 211 383 266</a><br>
             <a href="mailto:info@buzzbeat.pt">info@buzzbeat.pt</a></p>
           </div>
-          <div class="col-lg-7 col-md-7 col-sm-12">
+          <div class="col-lg-7 col-md-7 col-sm-12 order-first">
             <div class="footer-form">
               <span class="subtitle">FALE CONNOSCO</span>
-              <h2>Vamos tranformar<br>o seu negócio?</h2>
+              <h2>Vamos tranformar<br> o seu negócio?</h2>
               <form>
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
@@ -365,7 +365,7 @@
         </div>
         <div class="row align-center">
           <div class="col-lg-6 col-md-6 col-sm-12">
-            <h4>A transformação do seu negócio<br>começa aqui e agora</h4>
+            <h4>A transformação do seu negócio<br> começa aqui e agora</h4>
           </div>
           <div class="col-lg-1 col-md-1 col-sm-12"></div>
           <div class="col-lg-5 col-md-5 col-sm-12 newsletter">
