--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="col-lg-5 col-md-5 col-sm-12">
                       <span class="subtitle">AGÊNCIA DE ESTRATÉGIA DIGITAL</span>
                       <h1>A evolução do seu<br> negócio começa<br> aqui e agora</h1>
-                      <a class="desktop btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
+                      <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Sobre Nós</span></a>
                     </div>
                     <div class="col-lg-1"></div>
                     <div class="col-lg-5"></div>
