--- a/industria-grande-distribuicao-e-consumo.html
+++ b/industria-grande-distribuicao-e-consumo.html
@@ -57,270 +57,52 @@
       <!-- END Module Navigation-->
   </header>
 
-  <section>
-    <div class="wrapper">
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <h2>Somos<br> Dinâmicos</h2>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <p>Estamos onde o seu negócio mais precisa</p>
-        </div>
-      </div>
-    </div>
-    
-    <div class="larger-wrapper">
-      <div class="row banner-img">
-        <div class="col-lg-9 col-md-9">
-            <img class="img-fluid" src="img/00-servicos-img.jpg">
-        </div>
-        <div class="col-lg-3 col-md-3"></div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6 col-md-6">
-        </div>
-        <div class="col-lg-6 col-md-6">
-          <div class="primary-article">
-            <h3 class="article-title">Desenvolvemos projetos e aplicamos a nossa experiência nos mais variados setores do mercado</h3>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <div class="wrapper">
-      <div class="row">
-        <div class="col-lg-5 col-md-5 col-sm-12">
-          <span class="subtitle">EXPERIÊNCIA</span>
-          <h2>Construimos a estratégia ideal para o seu público</h2>
-        </div>
-        <div class="col-lg-7 col-md-7 col-sm-12">
-          <p>Exploramos o caminho ideal para que o seu produto, o seu serviço, o seu negócio alcancem os objetivos definidos e se destaquem no contexto envolvente onde estão inseridos</p>
-          <p>Explore as indústrias onde já trabalhamos, e descubra o que podemos fazer pelo seu negócio</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <div class="wrapper">
-      <button class="accordion">
-        <h2>Grande distribuição & Consumo</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong>A nossa experiência no sector da Grande Distribuição & Consumo é diversa.</strong></p>
-            <p>Somos abordados por desafios nas mais variantes áreas, e trabalhamos para responder ao objetivo do seu projeto.</p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="img/01-accordion-img.jpg">
-          </div>
-        </div>
-      </div>
-
-      <button class="accordion">
-        <h2>Automóvel</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong></strong></p>
-            <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="">
-          </div>
-        </div>
-      </div>
-
-      <button class="accordion">
-        <h2>Retalho</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong></strong></p>
-            <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="">
-          </div>
-        </div>
-      </div>
-
-      <button class="accordion">
-        <h2>Saúde</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong></strong></p>
-            <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="">
-          </div>
-        </div>
-      </div>
-
-      <button class="accordion">
-        <h2>Turismo</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong></strong></p>
-            <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="">
-          </div>
-        </div>
-      </div>
-
-      <button class="accordion">
-        <h2>Construção & Real State</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong></strong></p>
-            <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="">
-          </div>
-        </div>
-      </div>
-
-      <button class="accordion">
-        <h2>Banca & Financeiras</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong></strong></p>
-            <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="">
-          </div>
-        </div>
-      </div>
-
-      <button class="accordion">
-        <h2>Tecnologia</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong></strong></p>
-            <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="">
-          </div>
-        </div>
-      </div>
-
-      <button class="accordion">
-        <h2>Media</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong></strong></p>
-            <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="">
-          </div>
-        </div>
-      </div>
-
-      <button class="accordion">
-        <h2>Moda</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong></strong></p>
-            <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="">
-          </div>
-        </div>
-      </div>
-
-      <button class="accordion">
-        <h2>Institucional</h2>
-        <div class="circle-plus"><img src="img/plus.svg"></div>
-      </button>
-      <div class="panel">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong></strong></p>
-            <p></p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
-          </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <button class="accordion">
-      <h2>Institucional</h2>
-      <div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div>
-    </button>
-    <div class="panel">
-      <div class="row">
-        <div class="col-lg-8 col-md-8 col-sm-12">
-          <p><strong>Não encontra o seu setor? Desafie-nos</strong></p>
-          <p>Fale connosco e veja o que podemos fazer pelo seu negócio</p>
-          <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Contactos</span></a>
-        </div>
-        <div class="col-lg-5 col-md-5 col-sm-12">
-          <img src="img/12-accordion-img.jpg">
-        </div>
-      </div>
+  <div class="larger-wrapper">
+    <div class=industry-banner>
+      <span class="subtitle">INDÚSTRIAS | GRANDE DISTRIBUIÇÃO & CONSUMO</span>
+      <h2>Grande Distribuição<br> & Consumo</h2>
     </div>
   </div>
+
+  <section>
+    <div class="wrapper">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <span class="subtitle">GRANDE DISTRIBUIÇÃO & CONSUMO</span>
+          <h2>A nossa experiência no sector da Grande Distribuição & Consumo é diversa. </h2>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <p>As várias empresas que requisitam a Buzzbeat apresentaram desafios diferentes. Se uns são estritamente relacionados à Consultoria de Estratégia Global do Negócio ou do Projeto, outros solicitam a construção e gestão de ecossistemas digitais que compreendem uma multidisciplinaridade de contributos da equipa Buzzbeat:</p>
+          <p>desde a estratégia orientada para cada canal ou projeto, como a gestão de comunidades das redes sociais ou a produção de conteúdos rich media, passando pelo desenvolvimento e implementação de técnicas SEO ou pelo lançamento de campanhas de Publicidade Online.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="larger-wrapper">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <span class="">DO CONCEITO AO PRODUTO FINAL</span>
+          <h2>De referir que os projectos de Consultoria & Estratégia não se ficam por aí. </h2>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <p>Frequentemente, os clientes envolvem-nos ao longo dos seus projetos, desde o desenho do Conceito Criativo à construção do Caderno de Encargos, até à análise das propostas recebidas dos fornecedores e apoio na respetiva decisão final.</p>
+          <p>A nossa experiência permitem tomar conhecimento detalhado do sector, pois o estudo end-to-end do processo de conceção, comunicação e dinamização dos produtos é fundamental para o sucesso de cada projeto.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section>
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-10 col-md-10">
-          <span class="subtitle">SERVIÇOS</span>
-          <h2>Adicionamos valor<br> ao seu futuro</h2>
+          <span class="subtitle">INDÚSTRIAS</span>
+          <h2>Estamos onde o seu<br> negócio mais precisa</h2>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-12">
-          <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Os nossos Serviços</span></a>
+          <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Todas as Indústrias</span></a>
         </div>
       </div>
       <div class="row">
@@ -330,23 +112,26 @@
               <div class="owl-carousel owl-theme right-slider">
                 <div class="item">
                   <a href="">
-                    <img src="img/01-carousel-img.jpg">
-                    <span class="service-title">Consultoria & Estratégia</span>
-                    <p>Desenvolvemos planos para atingir os seus objetivos mais cedo.</p>
+                    <img src="img/01-industries-img.jpg">
+                    <span class="service-title">Grande Distribuição & Consumo</span>
                   </a>
                 </div>
                 <div class="item">
                   <a href="">
-                    <img src="img/02-carousel-img.jpg">
-                    <span class="service-title">Transformação Digital</span>
-                    <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
+                    <img src="img/02-industries-img.jpg">
+                    <span class="service-title">Automóvel</span>
                   </a>
                 </div>
                 <div class="item">
                   <a href="">
-                    <img src="img/03-carousel-img.jpg">
-                    <span class="service-title">Consumer Insight</span>
-                    <p>Breve descrição do serviço - o que fazemos para que o cliente queira saber mais - máx 2 linhas</p>
+                    <img src="img/03-industries-img.jpg">
+                    <span class="service-title">Saúde</span>
+                  </a>
+                </div>
+                <div class="item">
+                  <a href="">
+                    <img src="img/04-industries-img.jpg">
+                    <span class="service-title">Retalho</span>
                   </a>
                 </div>
               </div>
