--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- END Module Navigation-->
   </header>
 
-  <section class="section-0 slider">
+  <section class="homepage section-0 slider">
     <!-- Module Main Slider -->
     <div class="slider-wrap">
         <div class="slider" id="slider">
@@ -129,7 +129,7 @@
     </div>
   </section>
 
-  <section class="section-1">
+  <section class="homepage section-1">
     
     <div class="wrapper">
       <div class="row">
@@ -191,7 +191,7 @@
   </div>
   <!-- END Module Video Banner -->
 
-  <section class="section-2">
+  <section class="homepage section-2">
 
     <div class="wrapper">
       
@@ -245,7 +245,7 @@
 
   </section>
 
-  <section class="section-3">
+  <section class="homepage section-3">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-10 col-md-10">
@@ -308,7 +308,7 @@
     </div>
   </section>
 
-  <section class="section-4">
+  <section class="homepage section-4">
 
     <div class="larger-wrapper">
       <div class="row team align-center">
@@ -344,7 +344,7 @@
           <div class="col-lg-7 col-md-7 col-sm-12 order-first">
             <div class="footer-form">
               <span class="subtitle">FALE CONNOSCO</span>
-              <h2>Vamos tranformar<br> o seu negócio?</h2>
+              <h2>Vamos transformar<br> o seu negócio?</h2>
               <form>
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
