--- a/blogpost.html
+++ b/blogpost.html
@@ -32,11 +32,11 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width nav-bar sticky-bar transparent-nav">
+      <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
               <ul>
-                  <li><a href="#"><img src="img/logo-dark.svg"></a></li>
+                  <li><a href="#"><img src="img/logo-light.svg"></a></li>
                   <li><a href="#">Insights</a></li>
                   <li><a href="#">Serviços</a></li>
                   <li><a href="#">Indústrias</a></li>
@@ -45,7 +45,7 @@
               </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
-            <a href="#"><img src="img/logo-dark.svg"></a>
+            <a href="#"><img src="img/logo-light.svg"></a>
             <div class="menu" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -57,7 +57,7 @@
       <!-- END Module Navigation-->
   </header>
     
-  <section>
+  <section class="head-section">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -68,6 +68,8 @@
         <div class="col-lg-6 col-md-6 col-sm-12"></div>
       </div>
     </div>
+  </section>
+  <section>
     <div class="larger-wrapper">
       <div class="row banner-img">
         <div class="col-lg-12 col-md-12 col-sm-12">
@@ -144,7 +146,7 @@
           <div class="col-lg-7 col-md-7 col-sm-12 order-first">
             <div class="footer-form">
               <span class="subtitle">FALE CONNOSCO</span>
-              <h2>Vamos tranformar<br> o seu negócio?</h2>
+              <h2>Vamos transformar<br> o seu negócio?</h2>
               <form>
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
