--- a/contactos.html
+++ b/contactos.html
@@ -31,20 +31,20 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width nav-bar sticky-bar transparent-nav">
+      <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
               <ul>
-                  <li><a href="#"><img src="img/logo-dark.svg"></a></li>
+                  <li><a href="#"><img src="img/logo-light.svg"></a></li>
                   <li><a href="#">Insights</a></li>
                   <li><a href="#">Serviços</a></li>
                   <li><a href="#">Indústrias</a></li>
                   <li><a href="#">Sobre</a></li>
-                  <li><a class="btn" href="">VAMOS FALAR</a></li>
+                  <li><a class="btn" href="">Contactos</a></li>
               </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
-            <a href="#"><img src="img/logo-dark.svg"></a>
+            <a href="#"><img src="img/logo-light.svg"></a>
             <div class="menu" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -109,7 +109,7 @@
           <div class="col-lg-7 col-md-7 col-sm-12 order-first">
             <div class="footer-form">
               <span class="subtitle">FALE CONNOSCO</span>
-              <h2>Vamos tranformar<br> o seu negócio?</h2>
+              <h2>Vamos transformar<br> o seu negócio?</h2>
               <form>
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
