--- a/industrias.html
+++ b/industrias.html
@@ -32,11 +32,11 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width nav-bar sticky-bar transparent-nav">
+      <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
               <ul>
-                  <li><a href="#"><img src="img/logo-dark.svg"></a></li>
+                  <li><a href="#"><img src="img/logo-light.svg"></a></li>
                   <li><a href="#">Insights</a></li>
                   <li><a href="#">Serviços</a></li>
                   <li><a href="#">Indústrias</a></li>
@@ -45,7 +45,7 @@
               </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
-            <a href="#"><img src="img/logo-dark.svg"></a>
+            <a href="#"><img src="img/logo-light.svg"></a>
             <div class="menu" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -57,9 +57,9 @@
       <!-- END Module Navigation-->
   </header>
 
-  <section>
+  <section class="head-section">
     <div class="wrapper">
-      <div class="row">
+      <div class="row align-bottom">
         <div class="col-lg-6 col-md-6 col-sm-12">
           <h2>Somos<br> Dinâmicos</h2>
         </div>
@@ -71,29 +71,31 @@
     
     <div class="larger-wrapper">
       <div class="row banner-img">
-        <div class="col-lg-9 col-md-9">
+        <div class="col-lg-11 col-md-11 col-sm-11">
             <img class="img-fluid" src="img/00-servicos-img.jpg">
         </div>
-        <div class="col-lg-3 col-md-3"></div>
+        <div class="col-lg-1 col-md-1"></div>
       </div>
       <div class="row">
-        <div class="col-lg-6 col-md-6">
+        <div class="col-lg-5 col-md-5">
         </div>
-        <div class="col-lg-6 col-md-6">
-          <div class="primary-article">
-            <h3 class="article-title">Desenvolvemos projetos e aplicamos a nossa experiência nos mais variados setores do mercado</h3>
+        <div class="col-lg-7 col-md-7">
+          <div class="blue-square">
+            <h3>Desenvolvemos projetos e aplicamos a nossa experiência nos mais variados setores do mercado</h3>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section>
+  <section class="industry section-1">
     <div class="wrapper">
-      <div class="row">
-        <div class="col-lg-5 col-md-5 col-sm-12">
+      <div class="row align-bottom">
+        <div class="col-lg-12 col-md-12 col-sm-12">
           <span class="subtitle">EXPERIÊNCIA</span>
-          <h2>Construimos a estratégia ideal para o seu público</h2>
+        </div>
+        <div class="col-lg-5 col-md-5 col-sm-12">
+          <h3>Construimos a<br> estratégia ideal<br> para o seu público</h3>
         </div>
         <div class="col-lg-7 col-md-7 col-sm-12">
           <p>Exploramos o caminho ideal para que o seu produto, o seu serviço, o seu negócio alcancem os objetivos definidos e se destaquem no contexto envolvente onde estão inseridos</p>
@@ -103,10 +105,10 @@
     </div>
   </section>
 
-  <section>
-    <div class="wrapper">
+  <section class="industry section-2">
+    <div class="larger-wrapper">
       <button class="accordion">
-        <h2>Grande distribuição & Consumo</h2>
+        <h3>Grande distribuição & Consumo</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -123,7 +125,7 @@
       </div>
 
       <button class="accordion">
-        <h2>Automóvel</h2>
+        <h3>Automóvel</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -140,7 +142,7 @@
       </div>
 
       <button class="accordion">
-        <h2>Retalho</h2>
+        <h3>Retalho</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -157,7 +159,7 @@
       </div>
 
       <button class="accordion">
-        <h2>Saúde</h2>
+        <h3>Saúde</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -174,7 +176,7 @@
       </div>
 
       <button class="accordion">
-        <h2>Turismo</h2>
+        <h3>Turismo</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -191,7 +193,7 @@
       </div>
 
       <button class="accordion">
-        <h2>Construção & Real State</h2>
+        <h3>Construção & Real State</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -208,7 +210,7 @@
       </div>
 
       <button class="accordion">
-        <h2>Banca & Financeiras</h2>
+        <h3>Banca & Financeiras</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -225,7 +227,7 @@
       </div>
 
       <button class="accordion">
-        <h2>Tecnologia</h2>
+        <h3>Tecnologia</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -242,7 +244,7 @@
       </div>
 
       <button class="accordion">
-        <h2>Media</h2>
+        <h3>Media</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -259,7 +261,7 @@
       </div>
 
       <button class="accordion">
-        <h2>Moda</h2>
+        <h3>Moda</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -276,7 +278,7 @@
       </div>
 
       <button class="accordion">
-        <h2>Institucional</h2>
+        <h3>Institucional</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
       <div class="panel">
@@ -294,7 +296,7 @@
     </div>
 
     <button class="accordion">
-      <h2>Institucional</h2>
+      <h3>Institucional</h3>
       <div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div>
     </button>
     <div class="panel">
@@ -370,7 +372,7 @@
           <div class="col-lg-7 col-md-7 col-sm-12 order-first">
             <div class="footer-form">
               <span class="subtitle">FALE CONNOSCO</span>
-              <h2>Vamos tranformar<br> o seu negócio?</h2>
+              <h2>Vamos transformar<br> o seu negócio?</h2>
               <form>
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
