--- a/sobre.html
+++ b/sobre.html
@@ -32,11 +32,11 @@
   <!-- Add your site or application content here -->
   <header>
       <!-- Module Navigation-->
-      <div class="full-width nav-bar sticky-bar transparent-nav">
+      <div class="full-width nav-bar light-nav">
         <div class="wrapper">
           <nav class="main-nav desktop">
               <ul>
-                  <li><a href="#"><img src="img/logo-dark.svg"></a></li>
+                  <li><a href="#"><img src="img/logo-light.svg"></a></li>
                   <li><a href="#">Insights</a></li>
                   <li><a href="#">Serviços</a></li>
                   <li><a href="#">Indústrias</a></li>
@@ -45,7 +45,7 @@
               </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
-            <a href="#"><img src="img/logo-dark.svg"></a>
+            <a href="#"><img src="img/logo-light.svg"></a>
             <div class="menu" onclick="myFunction(this)">
               <div class="bar1"></div>
               <div class="bar2"></div>
@@ -57,9 +57,9 @@
       <!-- END Module Navigation-->
   </header>
 
-  <section>
+  <section class="head-section">
     <div class="wrapper">
-      <div class="row">
+      <div class="row align-bottom">
         <div class="col-lg-6 col-md-6 col-sm-12">
           <h1>Somos<br>Buzzbeat</h1>
         </div>
@@ -76,85 +76,99 @@
     </div>
   </div>
 
-  <section>
+  <section class="about section-1">
     <div class="wrapper">
       <div class="row align-center">
-        <div class="col-lg-4 col-md-4 col-sm-12">
+        <div class="col-lg-12 col-md-12 col-sm-12">
           <span class="subtitle">COMPROMISSO</span>
-          <h2>A adicionar valor ao mercado digital desde 2009</h2>
         </div>
-        <div class="col-lg-8 col-md-8 col-sm-12">
-          <p>A Buzzbeat é a soma das capacidades técnicas, estratégicas e criativas, que trabalham no sentido de transformar projetos, serviços, marcas em experiências de valor tanto para as pessoas como para as empresas</p>
-          <p>Estamos lado a lado com as empresas e marcas para desenhar a sua estratégia, repensar a sua presença no mercado, transformar digitalmente o seu negócio.</p>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="padding-right">
+            <h3>A adicionar valor ao mercado digital desde 2009</h3>
+          </div>
+        </div>
+        <div class="col-lg-7 col-md-7 col-sm-12">
+          <div class="padding-left">
+            <p>A Buzzbeat é a soma das capacidades técnicas, estratégicas e criativas, que trabalham no sentido de transformar projetos, serviços, marcas em experiências de valor tanto para as pessoas como para as empresas</p>
+            <p>Estamos lado a lado com as empresas e marcas para desenhar a sua estratégia, repensar a sua presença no mercado, transformar digitalmente o seu negócio.</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section>
+  <section class="about section-2">
     <div class="wrapper">
       <div class="row align-center">
         <div class="col-lg-8 col-md-8 col-sm-12">
-          <div class="img-blue"><img class="img-fluid" src="img/01-about_us-img.jpg"></div>
+          <div class="img-blue padding-right"><img class="img-fluid" src="img/01-about_us-img.jpg"></div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <span class="subtitle">DEFINIMOS</span>
-          <h2>Estratégia</h2>
-          <p>Criamos planos para atingir os seus objetivos mais cedo.</p>
-          <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Estratégia</p>
+          <div class="padding-left">
+            <span class="subtitle">DEFINIMOS</span>
+            <h3>Estratégia</h3>
+            <p>Criamos planos para atingir os seus objetivos mais cedo.</p>
+            <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Estratégia</p>
+          </div>
         </div>
       </div>
     </div>  
   </section>
 
-  <section>
+  <section class="about section-2">
     <div class="wrapper">
       <div class="row align-center">
-        <div class="col-lg-8 col-md-8 col-sm-12">
-          <div class="img-blue"><img class="img-fluid" src="img/02-about_us-img.jpg"></div>
+        <div class="col-lg-8 col-md-8 col-sm-12 go-right">
+          <div class="img-blue padding-left"><img class="img-fluid" src="img/02-about_us-img.jpg"></div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <span class="subtitle">PENSAMOS</span>
-          <h2>Marketing</h2>
-          <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Marketing</p>
+        <div class="col-lg-4 col-md-4 col-sm-12 go-left">
+          <div class="padding-right">
+            <span class="subtitle">PENSAMOS</span>
+            <h3>Marketing</h3>
+            <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Marketing</p>
+          </div>
         </div>
       </div>  
     </div>
   </section>
 
-  <section>
+  <section class="about section-2">
     <div class="wrapper">
       <div class="row align-center">
         <div class="col-lg-8 col-md-8 col-sm-12">
-          <div class="img-blue"><img class="img-fluid" src="img/03-about_us-img.jpg"></div>
+          <div class="img-blue padding-right"><img class="img-fluid" src="img/03-about_us-img.jpg"></div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
-          <span class="subtitle">PRODUZIMOS</span>
-          <h2>Criatividade<br> & Desenvolvimento</h2>
-          <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Criatividade & Desenvolvimento</p>
+          <div class="padding-left">
+            <span class="subtitle">PRODUZIMOS</span>
+            <h3>Criatividade<br> & Desenvolvimento</h3>
+            <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Criatividade & Desenvolvimento</p>
+          </div>
         </div>
       </div> 
     </div> 
   </section>
 
-  <section>
+  <section class="about section-2">
     <div class="wrapper">
       <div class="row align-center">
-        <div class="col-lg-8 col-md-8 col-sm-12">
-          <div class="img-blue"><img class="img-fluid" src="img/04-about_us-img.jpg"></div>
+        <div class="col-lg-8 col-md-8 col-sm-12 go-right">
+          <div class="img-blue padding-left"><img class="img-fluid" src="img/04-about_us-img.jpg"></div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12">
-          <span class="subtitle">Atuamos</span>
-          <h2>Formação</h2>
-          <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Marketing</p>
+        <div class="col-lg-4 col-md-4 col-sm-12 go-left">
+          <div class="padding-right">
+            <span class="subtitle">Atuamos</span>
+            <h3>Formação</h3>
+            <p>Que tipo de serviços, experiências, abordagens podem ser incluídas na parte de serviços prestados de Marketing</p>
+          </div>
         </div>
       </div>  
     </div>
   </section>
 
-  <section>
+  <section class="about section-3">
     <div class="wrapper">
-      <div class="row">
+      <div class="row align-bottom">
         <div class="col-lg-10 col-md-10">
           <span class="subtitle">SERVIÇOS</span>
           <h2>Adicionamos valor<br> ao seu futuro</h2>
@@ -210,7 +224,7 @@
           <div class="col-lg-7 col-md-7 col-sm-12 order-first">
             <div class="footer-form">
               <span class="subtitle">FALE CONNOSCO</span>
-              <h2>Vamos tranformar<br> o seu negócio?</h2>
+              <h2>Vamos transformar<br> o seu negócio?</h2>
               <form>
                 <input type="text" id="name" name="fname" placeholder="Nome*"><br>
                 <input type="text" id="email" name="mail" placeholder="Email*"><br>
