--- a/industrias.html
+++ b/industrias.html
@@ -111,16 +111,26 @@
         <h3>Grande distribuição & Consumo</h3>
         <div class="circle-plus"><img src="img/plus.svg"></div>
       </button>
-      <div class="panel">
+      <div class="panel active">
         <div class="row">
+          <div class="col-lg-7 col-md-7 col-sm-12"></div>
+            <div class="col-lg-5 col-md-5 col-sm-12">
+              <img class="img-fluid" src="img/01-accordion-img.jpg">
+            </div>
+        </div>
+        <div class="row offset-panel-blue">
           <div class="col-lg-8 col-md-8 col-sm-12">
-            <p><strong>A nossa experiência no sector da Grande Distribuição & Consumo é diversa.</strong></p>
-            <p>Somos abordados por desafios nas mais variantes áreas, e trabalhamos para responder ao objetivo do seu projeto.</p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saiba mais</span></a>
+            <div class="row accordion-blue">
+              <div class="col-lg-2 col-md-2 col-sm-12"></div>
+              <div class="col-lg-6 col-md-6 col-sm-12">
+                <p><strong>A nossa experiência no sector da Grande Distribuição & Consumo é diversa.</strong></p>
+                <p>Somos abordados por desafios nas mais variantes áreas, e trabalhamos para responder ao objetivo do seu projeto.</p>
+                <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
+              </div>
+              <div class="col-lg-5 col-md-5 col-sm-12"></div>
+            </div>
           </div>
-          <div class="col-lg-5 col-md-5 col-sm-12">
-            <img src="img/01-accordion-img.jpg">
-          </div>
+          <div class="col-lg-4 col-md-4 col-sm-12"></div>
         </div>
       </div>
 
