--- a/contactos.html
+++ b/contactos.html
@@ -58,23 +58,25 @@
 
   <section>
     <div class="wrapper">
-      <div class="row">
+      <div class="row contact-blue">
         <div class="col-lg-5 col-md-5 col-sm-12">
-          <div class="blue-board">
-            <h2>Comece hoje a transformar o seu projeto</h2>
+          <div class="blue-board padding-right">
+            <h3>Comece hoje a transformar o seu projeto</h3>
             <a href="tel:+351211383266">(+351) 211 383 266</a><br>
             <a href="mailto:info@buzzbeat.pt">info@buzzbeat.pt</a>
             <p>Edifício Núcleo Central 100,<br>
               Salas 342, 344, 346<br>
               2740-122 Porto Salvo, Portugal</p>
-            <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Obter direções</span></a>
+            <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Obter direções</span></a>
           </div>
         </div>
         <div class="col-lg-7 col-md-7 col-sm-12">
-          <p>Estamos onde o seu negócio mais precisa</p>
+          <div class="padding-left">
+            <p>Estamos onde o seu negócio mais precisa</p>
+          </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row contact-img">
         <div class="col-lg-4 col-md-4 col-sm-12"></div>
         <div class="col-lg-8 col-md-8 col-sm-12">
           <img class="img-fluid" src="img/01-contacts-img.jpg">
@@ -83,7 +85,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="contact section-2">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -101,8 +103,8 @@
         <div class="row align-center">
           <div class="col-lg-5 col-md-5 col-sm-12 order-second">
             <span class="subtitle">FALE CONNOSCO</span>
-            <p>Estamos disponíveis para receber as suas propostas ou esclarecer qualquer questão.</p>
-            <p>Diga-nos o motivo do seu contacto.</p>
+            <p>Estamos disponíveis para receber<br> as suas propostas ou esclarecer<br> qualquer questão.</p>
+            <p>Diga-nos o motivo do seu<br> contacto.</p>
             <a class="btn" href="">Iniciar um Projeto</a>
             <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Saber mais sobre a Buzzbeat</span></a>
           </div>
