--- a/industrias.html
+++ b/industrias.html
@@ -303,30 +303,40 @@
           </div>
         </div>
       </div>
-    </div>
+    
 
     <button class="accordion">
-      <h3>Institucional</h3>
+      <h3 class="blue-txt">A sua Indústria</h3>
       <div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div>
     </button>
-    <div class="panel">
+    <div class="panel always-open">
       <div class="row">
+        <div class="col-lg-7 col-md-7 col-sm-12"></div>
+          <div class="col-lg-5 col-md-5 col-sm-12">
+            <img class="img-fluid" src="img/12-accordion-img.jpg">
+          </div>
+      </div>
+      <div class="row offset-panel-blue">
         <div class="col-lg-8 col-md-8 col-sm-12">
-          <p><strong>Não encontra o seu setor? Desafie-nos</strong></p>
-          <p>Fale connosco e veja o que podemos fazer pelo seu negócio</p>
-          <a class="btn-blue-ball btn-dark" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-right.svg"></div><span>Contactos</span></a>
+          <div class="row accordion-blue">
+            <div class="col-lg-2 col-md-2 col-sm-12"></div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+              <h3>Não encontra o seu setor? Desafie-nos</h3>
+              <p>Fale connosco e veja o que podemos fazer pelo seu negócio</p>
+              <a class="btn-blue-ball btn-white-ball btn-dark" href=""><div class="btn-ball btn-ball-white"><img class="btn-arrow" src="img/arrow-right-blue.svg"></div><span>Saiba mais</span></a>
+            </div>
+            <div class="col-lg-5 col-md-5 col-sm-12"></div>
+          </div>
         </div>
-        <div class="col-lg-5 col-md-5 col-sm-12">
-          <img src="img/12-accordion-img.jpg">
-        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12"></div>
       </div>
     </div>
   </div>
   </section>
 
-  <section>
+  <section class="industry section-3">
     <div class="wrapper">
-      <div class="row">
+      <div class="row align-bottom">
         <div class="col-lg-10 col-md-10">
           <span class="subtitle">SERVIÇOS</span>
           <h2>Adicionamos valor<br> ao seu futuro</h2>
