--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="blog section-1">
     <div class="larger-wrapper">
       <div class="row banner-img">
         <div class="col-lg-9 col-md-9">
@@ -91,54 +91,62 @@
     </div>
   </section>
 
-  <section>
+  <section class="blog section-2">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a href="">
+          <a class="padding-right" href="">
             <img class="img-fluid" src="img/01-servicos-img.jpg">
-            <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
-            <h3 class="article-title">Título do artigo nº 01</h3>
-            <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
-            <p><strong>Ler mais</strong></p>
+            <div class="article-info">
+              <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
+              <h3 class="article-title">Título do artigo nº 01</h3>
+              <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
+              <p><strong>Ler mais</strong></p>
+            </div>
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a href="">
+          <a class="padding-left" href="">
             <img class="img-fluid" src="img/02-servicos-img.jpg">
-            <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
-            <h3 class="article-title">Título do artigo nº 01</h3>
-            <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
-            <p><strong>Ler mais</strong></p>
+            <div class="article-info">
+              <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
+              <h3 class="article-title">Título do artigo nº 01</h3>
+              <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
+              <p><strong>Ler mais</strong></p>
+            </div>
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a href="">
+          <a class="padding-right" href="">
             <img class="img-fluid" src="img/01-servicos-img.jpg">
-            <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
-            <h3 class="article-title">Título do artigo nº 01</h3>
-            <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
-            <p><strong>Ler mais</strong></p>
+            <div class="article-info">
+              <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
+              <h3 class="article-title">Título do artigo nº 01</h3>
+              <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
+              <p><strong>Ler mais</strong></p>
+            </div>
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <a href="">
+          <a class="padding-left" href="">
             <img class="img-fluid" src="img/02-servicos-img.jpg">
-            <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
-            <h3 class="article-title">Título do artigo nº 01</h3>
-            <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
-            <p><strong>Ler mais</strong></p>
+            <div class="article-info">
+              <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
+              <h3 class="article-title">Título do artigo nº 01</h3>
+              <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
+              <p><strong>Ler mais</strong></p>
+            </div>
           </a>
         </div>
       </div>
     </div>
   </section>
   
-  <div>
+  <div class="btn-container">
   <a class="btn-blue-ball btn-light" href=""><div class="btn-ball"><img class="btn-arrow" src="img/arrow-down.svg"></div><span>Ver Mais</span></a>
   </div>
 
-  <section class="section-4">
+  <section class="blog section-3">
 
     <div class="larger-wrapper">
       <div class="row team align-center">
