--- a/blogpost.html
+++ b/blogpost.html
@@ -57,7 +57,7 @@
       <!-- END Module Navigation-->
   </header>
     
-  <section class="head-section">
+  <section class="blogpost head-section">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -69,7 +69,7 @@
       </div>
     </div>
   </section>
-  <section>
+  <section class="blogpost section-1">
     <div class="larger-wrapper">
       <div class="row banner-img">
         <div class="col-lg-12 col-md-12 col-sm-12">
@@ -79,7 +79,7 @@
     </div>
   </section>
 
-  <section>
+  <section class="blogpost section-2">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-12">
@@ -107,25 +107,29 @@
     </div>
   </section>
 
-  <section>
+  <section class="blogpost section-3">
     <div class="wrapper">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12">
           <a href="">
-            <img class="img-fluid" src="img/01-servicos-img.jpg">
-            <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
-            <h3 class="article-title">Título do artigo nº 01</h3>
-            <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
-            <p><strong>Ler mais</strong></p>
+            <img class="img-fluid padding-right" src="img/01-servicos-img.jpg">
+            <div class="article-info">
+              <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
+              <h3 class="article-title">Título do artigo nº 01</h3>
+              <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
+              <p><strong>Ler mais</strong></p>
+            </div>
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
           <a href="">
-            <img class="img-fluid" src="img/02-servicos-img.jpg">
-            <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
-            <h3 class="article-title">Título do artigo nº 01</h3>
-            <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
-            <p><strong>Ler mais</strong></p>
+            <img class="img-fluid padding-left" src="img/02-servicos-img.jpg">
+            <div class="article-info">
+              <span class="subtitle">CASO DE ESTUDO 01 Set 2020</span><br>
+              <h3 class="article-title">Título do artigo nº 01</h3>
+              <span class="article-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><br>
+              <p><strong>Ler mais</strong></p>
+            </div>
           </a>
         </div>
       </div>
