--- a/contactos.html
+++ b/contactos.html
@@ -40,7 +40,7 @@
                   <li><a href="#">Serviços</a></li>
                   <li><a href="#">Indústrias</a></li>
                   <li><a href="#">Sobre</a></li>
-                  <li><a class="btn" href="">Contactos</a></li>
+                  <li><a class="btn" href="">VAMOS FALAR</a></li>
               </ul>
           </nav>
           <nav class="main-nav-mobile mobile">
